# dream-squad

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
agents/apify_collector/: apify_behavior.md  collect.py
agents/gemini_researcher/: gemini_behavior.md  research.py
agents/manual_input/: load.py  manual_behavior.md
agents/ollama_researcher/: ollama_behavior.md  research.py
agents/orchestrator/: orchestrator_behavior.md  run.py  update_cooldown.py
agents/playwright_collector/: collect.py
agents/scoring_merge/: instructions.md  merge_behavior.md  preprocess.py  run_local.py  score.py
agents/tavily_researcher/: research.py  tavily_behavior.md
agents/utils/: engagement.py  logging_config.py  paths.py  query_rotation.py  retry.py  seasonality.py  text_utils.py  validators.py
agents/visual_analyzer/: analyze_ollama.py  instructions.md
clients/casadobicho/: manual_input.yaml  profile.yaml
clients/ed-telas-e-varais/: manual_input.yaml  profile.yaml
clients/ilheus-iate-clube/: manual_input.yaml  profile.yaml
clients/musicalizando/: manual_input.yaml  profile.yaml
clients/opcao-seguros/: manual_input.yaml  profile.yaml
clients/verusca-lino/: manual_input.yaml  profile.yaml
config/: server_config.yaml
docs/: content_strategy.md  playwright_reference.md
planos/: plano-implementacao-correcoes-2026-05-11.md
