[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dream-squad"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "PyYAML>=6.0.1",
    "ollama>=0.5.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "apify-client>=1.7.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
